--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,13 @@ header{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin: 20px 90px;
+    border: 3px solid black;
+    /* overflow:auto; */
 }
 img{
-    margin-top: 45px;
+    margin: 20px 50px;
+    
 }
 header{
     background-color: hsla(0, 0%, 93%, 0.644);
